--- a/lista filtros/index.html
+++ b/lista filtros/index.html
@@ -12,6 +12,7 @@
     hola juniors comando dormir 25 dfsadawe dsfgdfgfdg locore
     <div>
         <p>hola hola holas eh amiwo</p>
+        <p>nueva modificación</p>
     </div>
 </body>
 
