--- a/lista filtros/index.html
+++ b/lista filtros/index.html
@@ -14,6 +14,7 @@
         <p>hola hola holas eh amiwo</p>
         <p>nueva modificación</p>
         <p>hoja</p>
+        <p>hey ameo</p>
     </div>
 </body>
 
