--- a/lista filtros/index.html
+++ b/lista filtros/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    hola juniors comando dormir 25  dfsadawe dsfgdfgfdg
+    hola juniors comando dormir 25  dfsadawe dsfgdfgfdg locore
 </body> 
 </html>
