--- a/lista filtros/index.html
+++ b/lista filtros/index.html
@@ -11,7 +11,7 @@
 <body>
     hola juniors comando dormir 25 dfsadawe dsfgdfgfdg locore
     <div>
-        <p>hola</p>
+        <p>hola hola holas eh amiwo</p>
     </div>
 </body>
 
